syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.reactive.order.module.order.grpc.dto";
option java_outer_classname = "OrderProto";

package order;

message ValidationError {
  string field = 1;
  string message = 2;
}
message ErrorResponse {
  string errorMsg = 1;
  repeated ValidationError errors = 2;
}

message OrderResponse {
  int64 id = 1;
  int64 productId = 2;
  int32 quantity = 3;
  string price = 4;
  string status = 5;
  string details = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

message CreateOrderRequest {
  int64 productId = 1;
  int32 quantity = 2;
  string price = 3;
}

message GetByIdRequest {
  int64 id = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrderById(GetByIdRequest) returns (OrderResponse);
}